--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
+
+    <script src="scripts.js" defer></script>
 </head>
 <body class="page">
 <div id="root"></div>
@@ -431,7 +433,6 @@
     </div>
 
 </div>
-<script src="scripts.js"></script>
 </body>
 
 </html>
