--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="scripts.js" defer></script>
 </head>
 <body class="page">
-<div id="root"><img src="assets/sh.png" class="main__sh"></div>
+<div id="root"><img src="assets/sh.webp" class="main__sh"></div>
 
 <div class="page__wrapper">
     <div class="page__wrapper-content">
