--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <link rel="stylesheet" href="styles.css">
 
     <script src="scripts.js" defer></script>
+
+    <link rel="preload" href="assets/sh.webp" as="image"/>
+    <link rel="preload" href="fonts/PTN77F_W.woff" as="font"/>
+    <link rel="preload" href="fonts/PTS75F_W.woff" as="font"/>
+    <link rel="preload" href="assets/banner.jpg" as="image"/>
+    <link rel="preload" href="favicon.ico" as="image"/>
 </head>
 <body class="page">
-<div id="root"><img src="assets/sh.webp" class="main__sh"></div>
-
 <div class="page__wrapper">
     <div class="page__wrapper-content">
         <header class="header">
